--- a/multivariate-linear-regression/2D_function_expansion.ipynb
+++ b/multivariate-linear-regression/2D_function_expansion.ipynb
@@ -47,7 +47,7 @@
       "metadata": {
         "id": "12Ah1LjN3PkU"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -68,7 +68,7 @@
       "metadata": {
         "id": "qWUscPHgo6Yq"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -105,7 +105,7 @@
           "height": 416
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -143,7 +143,7 @@
       "metadata": {
         "id": "dDgHkoqD3SG9"
       },
-      "execution_count": 7,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -154,29 +154,29 @@
       ],
       "metadata": {
         "id": "Hx52Kebbp7Wc",
-        "outputId": "993e441e-997d-4492-cdf0-0e2f84c4e446",
+        "outputId": "0ceea681-9d6d-4932-ad41-dc41ca1b1115",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "       f(x,y)         x         y\n",
-            "0    0.967201 -0.379994  0.335305\n",
-            "1    0.507726  0.368183 -0.950102\n",
-            "2    0.997297  0.022753  0.270234\n",
-            "3    0.768132  0.191954  0.811192\n",
-            "4    0.444461 -0.457639 -0.949100\n",
+            "0   -0.008623 -0.979715 -0.787134\n",
+            "1   -0.342691 -0.967432  0.992296\n",
+            "2    0.263352 -0.906436  0.694748\n",
+            "3    0.961849 -0.389024 -0.354648\n",
+            "4    0.988400  0.086125  0.380846\n",
             "..        ...       ...       ...\n",
-            "195  0.794289  0.544197  0.597335\n",
-            "196  0.978428  0.091306 -0.446933\n",
-            "197  0.947887 -0.560266 -0.101792\n",
-            "198  0.992297 -0.034947  0.350686\n",
-            "199  0.776629  0.303909  0.767554\n",
+            "195  0.687892  0.878475  0.201240\n",
+            "196  0.481673  0.436048  0.937068\n",
+            "197  0.956480 -0.149622 -0.523182\n",
+            "198  0.750990 -0.840022  0.124901\n",
+            "199  0.434099  0.669784 -0.820456\n",
             "\n",
             "[200 rows x 3 columns]\n"
           ]
@@ -203,29 +203,29 @@
       ],
       "metadata": {
         "id": "G9Q75xxHwtqY",
-        "outputId": "20bbcc48-5034-4a7c-9384-aae98111096e",
+        "outputId": "569b688b-b188-44c1-8f86-8fb8c4b39929",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "       f(x,y)         x         y       x^2       y^2       x^3       y^3\n",
-            "0    0.967201 -0.379994  0.335305  0.144395  0.112429 -0.054869  0.037698\n",
-            "1    0.507726  0.368183 -0.950102  0.135559  0.902695  0.049910 -0.857652\n",
-            "2    0.997297  0.022753  0.270234  0.000518  0.073026  0.000012  0.019734\n",
-            "3    0.768132  0.191954  0.811192  0.036846  0.658032  0.007073  0.533790\n",
-            "4    0.444461 -0.457639 -0.949100  0.209434  0.900791 -0.095845 -0.854940\n",
+            "0   -0.008623 -0.979715 -0.787134  0.959841  0.619579 -0.940370 -0.487692\n",
+            "1   -0.342691 -0.967432  0.992296  0.935925  0.984652 -0.905443  0.977066\n",
+            "2    0.263352 -0.906436  0.694748  0.821626  0.482675 -0.744751  0.335337\n",
+            "3    0.961849 -0.389024 -0.354648  0.151339  0.125775 -0.058875 -0.044606\n",
+            "4    0.988400  0.086125  0.380846  0.007418  0.145044  0.000639  0.055239\n",
             "..        ...       ...       ...       ...       ...       ...       ...\n",
-            "195  0.794289  0.544197  0.597335  0.296151  0.356810  0.161165  0.213135\n",
-            "196  0.978428  0.091306 -0.446933  0.008337  0.199749  0.000761 -0.089275\n",
-            "197  0.947887 -0.560266 -0.101792  0.313898  0.010362 -0.175867 -0.001055\n",
-            "198  0.992297 -0.034947  0.350686  0.001221  0.122981 -0.000043  0.043128\n",
-            "199  0.776629  0.303909  0.767554  0.092360  0.589139  0.028069  0.452196\n",
+            "195  0.687892  0.878475  0.201240  0.771718  0.040497  0.677935  0.008150\n",
+            "196  0.481673  0.436048  0.937068  0.190138  0.878096  0.082909  0.822835\n",
+            "197  0.956480 -0.149622 -0.523182  0.022387  0.273720 -0.003350 -0.143205\n",
+            "198  0.750990 -0.840022  0.124901  0.705636  0.015600 -0.592750  0.001948\n",
+            "199  0.434099  0.669784 -0.820456  0.448611  0.673148  0.300472 -0.552288\n",
             "\n",
             "[200 rows x 7 columns]\n"
           ]
@@ -246,30 +246,24 @@
       ],
       "metadata": {
         "id": "6NRbgEH3wGcW",
-        "outputId": "f05d8b06-aebc-49a1-dc2d-42d67d623d0e",
+        "outputId": "fdc759d8-b715-4e99-ddb8-1398f780e51c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[-3.79993810e-01  3.35305046e-01  1.44395296e-01  1.12429474e-01\n",
-            "  -5.48693185e-02  3.76981698e-02]\n",
-            " [ 3.68182932e-01 -9.50102414e-01  1.35558671e-01  9.02694597e-01\n",
-            "   4.99103889e-02 -8.57652316e-01]\n",
-            " [ 2.27529502e-02  2.70233766e-01  5.17696743e-04  7.30262883e-02\n",
-            "   1.17791282e-05  1.97341689e-02]\n",
+            "[[-0.97971451 -0.78713367  0.95984051  0.61957942 -0.94036967 -0.48769182]\n",
+            " [-0.967432    0.99229618  0.93592467  0.98465171 -0.90544347  0.97706614]\n",
+            " [-0.90643585  0.69474809  0.82162595  0.48267491 -0.74475121  0.33533748]\n",
             " ...\n",
-            " [-5.60266152e-01 -1.01791977e-01  3.13898161e-01  1.03616066e-02\n",
-            "  -1.75866514e-01 -1.05472842e-03]\n",
-            " [-3.49469759e-02  3.50685844e-01  1.22129112e-03  1.22980561e-01\n",
-            "  -4.26804314e-05  4.31275419e-02]\n",
-            " [ 3.03908546e-01  7.67554013e-01  9.23604044e-02  5.89139162e-01\n",
-            "   2.80691162e-02  4.52196128e-01]]\n"
+            " [-0.14962221 -0.5231824   0.02238681  0.27371982 -0.00334956 -0.14320539]\n",
+            " [-0.84002162  0.12490055  0.70563632  0.01560015 -0.59274976  0.00194847]\n",
+            " [ 0.66978394 -0.82045604  0.44861052  0.67314811  0.30047212 -0.55228843]]\n"
           ]
         }
       ]
@@ -281,7 +275,7 @@
         "$$J(\\Theta)=\\frac{1}{2M}\\sum_{i=1}^M(\\textbf{x}^{(i)}\\cdotθ-y^{(i)})^2=\\frac{1}{2M}||X\\Theta-Y||^2$$\n",
         "and its gradient is\n",
         "$$\\nabla_{\\Theta}J(\\Theta)=\\frac{1}{M}X^{T}(X\\Theta-Y)$$\n",
-        "Where $\\Theta$ is a vector with dimension being the same as the number of fitting terms including the bias term ($N+1$), and $X$ is the $M\\times(N+1)$ data matrix."
+        "where $\\Theta$ is a vector with dimension being the same as the number of fitting terms including the bias term ($N+1$), and $X$ is the $M\\times(N+1)$ data matrix."
       ],
       "metadata": {
         "id": "JnEscz6R2SDY"
@@ -299,7 +293,7 @@
       "metadata": {
         "id": "mU_Rqzl00UU0"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -322,7 +316,7 @@
       "metadata": {
         "id": "UHUgK7hy0grw"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -356,7 +350,7 @@
           "height": 646
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -424,7 +418,7 @@
           "height": 598
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -457,7 +451,7 @@
       "metadata": {
         "id": "Oizzg3vVJPK7"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -477,7 +471,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -529,7 +523,7 @@
       "metadata": {
         "id": "uYWk-zzIJPLK"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -563,7 +557,7 @@
           "height": 628
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -629,7 +623,7 @@
           "height": 576
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
