--- a/logistic-regression/Grading_weight.ipynb
+++ b/logistic-regression/Grading_weight.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMdlORVFipEPleTVyy2Dnzt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/LeoisWTT/PHYS3151-Machine-Learning-in-Physics-2023/blob/main/logistic-regression/Grading_weight.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/DavidGoing/PHYS3151-Machine-Learning-in-Physics-2024/blob/main/logistic-regression/Grading_weight.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -60,7 +59,7 @@
         "trusted": true,
         "id": "HbAYw2YxZqzD"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -93,7 +92,7 @@
       "metadata": {
         "id": "dDgHkoqD3SG9"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -107,39 +106,39 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "k3BpiAdgVZx2",
-        "outputId": "57838867-6b73-4501-e329-74cabe961f42"
+        "outputId": "5969b5a7-61dc-4c05-d899-0fc4a8cd2bb1"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "            HW1         HW2         HW3         HW4     Project  Presentation  \\\n",
-            "0    100.000000   76.741152  100.000000   14.066398   96.201525     19.677525   \n",
-            "1    100.000000  100.000000   32.071654   77.201440   42.962504    100.000000   \n",
-            "2     86.432508  100.000000  100.000000    0.000000  100.000000     65.030433   \n",
-            "3     91.140733   66.724016    0.000000  100.000000   90.639200     75.964197   \n",
-            "4      0.000000   86.750598   82.595084    2.654649   91.945784     53.090068   \n",
+            "0    100.000000  100.000000   30.954987    6.821568   13.376814      0.000000   \n",
+            "1     49.797146   46.227928   56.773286    0.000000   32.709680     74.314485   \n",
+            "2     20.366042    7.352175   87.481686   61.355763  100.000000      0.000000   \n",
+            "3     50.744332   66.416793   10.791449   86.776878   30.667904    100.000000   \n",
+            "4     10.557723   94.261697    0.000000   84.479583   58.941993      0.000000   \n",
             "..          ...         ...         ...         ...         ...           ...   \n",
-            "995   25.941090   88.888873  100.000000  100.000000   32.179496     86.883866   \n",
-            "996  100.000000   30.168376  100.000000   84.981243    0.000000      5.302890   \n",
-            "997   93.641762   66.721063    4.605008   35.610405    0.000000      0.000000   \n",
-            "998    0.000000   58.133412   35.403697    0.000000  100.000000      0.000000   \n",
-            "999  100.000000    0.000000   96.559655   58.018546  100.000000      0.000000   \n",
+            "995   94.179794    0.000000   55.672433  100.000000   26.116161     41.534595   \n",
+            "996    0.000000    0.000000  100.000000   14.663096  100.000000    100.000000   \n",
+            "997   32.590867   33.482063  100.000000   77.136192   67.067924     97.539828   \n",
+            "998  100.000000    0.000000   17.654241   73.715375   77.781429      0.000000   \n",
+            "999    0.000000   25.242776    0.000000   49.191349   28.109211     59.636227   \n",
             "\n",
             "           Exam  Grade  \n",
-            "0    100.000000      2  \n",
-            "1      0.000000      1  \n",
-            "2     52.819492      2  \n",
-            "3     30.824663      2  \n",
-            "4     70.707949      2  \n",
+            "0    100.000000      1  \n",
+            "1      0.000000      0  \n",
+            "2     16.207467      0  \n",
+            "3    100.000000      2  \n",
+            "4      3.311797      0  \n",
             "..          ...    ...  \n",
-            "995   51.239715      2  \n",
-            "996   49.770809      0  \n",
-            "997    0.000000      0  \n",
-            "998   26.924309      0  \n",
-            "999    7.744692      0  \n",
+            "995  100.000000      2  \n",
+            "996    0.000000      0  \n",
+            "997   29.442934      1  \n",
+            "998   98.641772      1  \n",
+            "999    0.000000      0  \n",
             "\n",
             "[1000 rows x 8 columns]\n"
           ]
@@ -162,14 +161,14 @@
         "$$\n",
         "h_{\\theta}=\\frac{1}{1+e^{-\\theta^Tx}}\n",
         "$$\n",
-        "Note that $\\theta^Tx$ can be non-linear. \n",
-        "    <br> <span style=\"border-bottom: dashed\">Cost function</span> in logistic refression is defined as: \n",
+        "Note that $\\theta^Tx$ can be non-linear.\n",
+        "    <br> <span style=\"border-bottom: dashed\">Cost function</span> in logistic refression is defined as:\n",
         "$$\n",
-        "J(\\theta)=\\frac{1}{m}\\sum_{i=1}^m-ylog(h_\\theta)-(1-y)log(1-h_\\theta),\n",
+        "J(\\theta)=-\\frac{1}{m}\\sum_{i=1}^m(y\\log(h_\\theta)+(1-y)\\log(1-h_\\theta)),\n",
         "$$\n",
         "and still, we can use gradient descent to minimize it.\n",
         "    \n",
-        "<br>In addition, we use <span style=\"border-bottom: dashed\">accuracy function</span> to see how well the algorithm works, which is defined as: \n",
+        "<br>In addition, we use <span style=\"border-bottom: dashed\">accuracy function</span> to see how well the algorithm works, which is defined as:\n",
         "$$\n",
         "Accuracy=\\frac{1}{m}\\sum_{i=1}^{m}\\delta_{predicted,real}\n",
         "$$"
@@ -192,7 +191,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        " <img title=\"decision boundary\" src=\"https://github.com/LeoisWTT/PHYS3151-Machine-Learning-in-Physics-2023/blob/main/logistic-regression/Decision_boundary.png?raw=1\" width=\"800\" /> <br> "
+        " <img title=\"decision boundary\" src=\"https://github.com/LeoisWTT/PHYS3151-Machine-Learning-in-Physics-2023/blob/main/logistic-regression/Decision_boundary.png?raw=1\" width=\"800\" /> <br>"
       ],
       "metadata": {
         "id": "V1G9VagSlIxQ"
@@ -209,7 +208,7 @@
         "\n",
         "# Activation function used to map any real value between 0 and 1\n",
         "    @staticmethod\n",
-        "    def sigmoid(x):  \n",
+        "    def sigmoid(x):\n",
         "        return 1 / (1 + np.exp(-x))\n",
         "\n",
         "# Computes the weighted sum of inputs Similar to Linear Regression\n",
@@ -228,7 +227,7 @@
         "        return total_cost\n",
         "\n",
         "# Computes the gradient of the cost function at the point theta\n",
-        "    def gradient(self, theta, x, y):     \n",
+        "    def gradient(self, theta, x, y):\n",
         "        m = x.shape[0]\n",
         "        return (1 / m) * np.dot(x.T, self.sigmoid(self.net_input(theta, x)) - y)\n",
         "\n",
@@ -296,7 +295,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        " <img title=\"grade\" src=\"https://github.com/LeoisWTT/PHYS3151-Machine-Learning-in-Physics-2023/blob/main/logistic-regression/grade.png?raw=1\" width=\"800\" /> <br> "
+        " <img title=\"grade\" src=\"https://github.com/LeoisWTT/PHYS3151-Machine-Learning-in-Physics-2023/blob/main/logistic-regression/grade.png?raw=1\" width=\"800\" /> <br>"
       ],
       "metadata": {
         "id": "mA1Ry7cJlK2E"
