--- a/principal-component-analysis/Ising_model/Ising_model_PCA.ipynb
+++ b/principal-component-analysis/Ising_model/Ising_model_PCA.ipynb
@@ -173,7 +173,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MOtWaf6QKUPG",
-        "outputId": "3caf2785-03b6-4835-cd30-99b0d9249b55"
+        "outputId": "884d4021-f2a7-4053-c934-8c4279452bb7"
       },
       "outputs": [
         {
@@ -181,12 +181,12 @@
           "name": "stdout",
           "text": [
             "Cloning into 'PHYS3151-Machine-Learning-in-Physics-2024'...\n",
-            "remote: Enumerating objects: 724, done.\u001b[K\n",
-            "remote: Counting objects: 100% (307/307), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (173/173), done.\u001b[K\n",
-            "remote: Total 724 (delta 173), reused 232 (delta 134), pack-reused 417\u001b[K\n",
-            "Receiving objects: 100% (724/724), 35.35 MiB | 23.34 MiB/s, done.\n",
-            "Resolving deltas: 100% (390/390), done.\n"
+            "remote: Enumerating objects: 733, done.\u001b[K\n",
+            "remote: Counting objects: 100% (316/316), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (182/182), done.\u001b[K\n",
+            "remote: Total 733 (delta 176), reused 233 (delta 134), pack-reused 417\u001b[K\n",
+            "Receiving objects: 100% (733/733), 35.84 MiB | 20.75 MiB/s, done.\n",
+            "Resolving deltas: 100% (393/393), done.\n"
           ]
         }
       ],
@@ -219,9 +219,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RTgthTSilqku",
-        "outputId": "39c00d76-1c52-4a0a-a84f-7786b1d08f1d"
+        "outputId": "bfe8f3a3-e6ed-40f7-e4d1-f3a8d68b3470"
       },
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -259,16 +259,17 @@
         "for i in range(100):\n",
         "  z[:,i]=x_mean[i]-x[:,i]\n",
         "\n",
-        "print(z)"
+        "print(z)\n",
+        "print(z.shape)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "3fRSdenMCeLL",
-        "outputId": "d26da24b-7975-4140-f188-578cabef28ff"
+        "outputId": "0768fa03-0caf-4076-b06e-854cd598e86d"
       },
-      "execution_count": 3,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -281,7 +282,8 @@
             " ...\n",
             " [ 0.4258  0.4168  0.4288 ...  0.4318  0.4216  0.43  ]\n",
             " [ 0.4258  0.4168  0.4288 ...  0.4318  0.4216  0.43  ]\n",
-            " [ 0.4258  0.4168  0.4288 ...  0.4318  0.4216  0.43  ]]\n"
+            " [ 0.4258  0.4168  0.4288 ...  0.4318  0.4216  0.43  ]]\n",
+            "(5000, 100)\n"
           ]
         }
       ]
@@ -318,7 +320,7 @@
         "id": "N3t46mOTm0t4",
         "outputId": "5f7cab6b-2a5e-4818-d48a-40714520b361"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -382,7 +384,7 @@
         "id": "LJJSjOG8oB9b",
         "outputId": "5178f6e0-22b9-41c4-cf63-e06a22672fef"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -428,7 +430,7 @@
         "id": "-3nn10_toyhw",
         "outputId": "90b9a18d-0946-47a1-953c-26d938268132"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -483,7 +485,7 @@
       "metadata": {
         "id": "g85CKCYWoGmq"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -514,7 +516,7 @@
         "id": "C7r-4P6prYUX",
         "outputId": "5203f6e0-3f40-4b63-9dc3-bac19141a5b0"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -596,7 +598,7 @@
         "id": "ipRVbiwYttRS",
         "outputId": "e968f8ad-95bc-444e-fcf9-93a3e7bccad5"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -766,7 +768,7 @@
         "id": "lr8fjw7axqxW",
         "outputId": "b9217a08-5bb7-4170-86bd-b645473c6103"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -825,7 +827,7 @@
         "id": "v1LuaH-k2YdF",
         "outputId": "8d495c59-b095-40ad-b8d8-1b3fe3cd6220"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
