--- a/principal-component-analysis/Ising_model/Ising_model_PCA.ipynb
+++ b/principal-component-analysis/Ising_model/Ising_model_PCA.ipynb
@@ -167,26 +167,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 17,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "MOtWaf6QKUPG",
-        "outputId": "884d4021-f2a7-4053-c934-8c4279452bb7"
+        "outputId": "66e8172e-3b71-41ab-eb7e-ac856e8e385a"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Cloning into 'PHYS3151-Machine-Learning-in-Physics-2024'...\n",
-            "remote: Enumerating objects: 733, done.\u001b[K\n",
-            "remote: Counting objects: 100% (316/316), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (182/182), done.\u001b[K\n",
-            "remote: Total 733 (delta 176), reused 233 (delta 134), pack-reused 417\u001b[K\n",
-            "Receiving objects: 100% (733/733), 35.84 MiB | 20.75 MiB/s, done.\n",
-            "Resolving deltas: 100% (393/393), done.\n"
+            "fatal: destination path 'PHYS3151-Machine-Learning-in-Physics-2024' already exists and is not an empty directory.\n"
           ]
         }
       ],
@@ -219,9 +213,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RTgthTSilqku",
-        "outputId": "bfe8f3a3-e6ed-40f7-e4d1-f3a8d68b3470"
+        "outputId": "d910e411-3265-4beb-df1c-b265ac35cddc"
       },
-      "execution_count": 3,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -267,9 +261,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3fRSdenMCeLL",
-        "outputId": "0768fa03-0caf-4076-b06e-854cd598e86d"
+        "outputId": "7b174688-b9f7-402e-ffbd-d60b2247a1aa"
       },
-      "execution_count": 6,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -318,9 +312,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "N3t46mOTm0t4",
-        "outputId": "5f7cab6b-2a5e-4818-d48a-40714520b361"
+        "outputId": "d3eb0e52-e9e0-4821-bab1-3696ae5a4434"
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -346,6 +340,41 @@
       "metadata": {
         "id": "uPOdpznknZ0D"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x5 = np.array([[0, 2], [1, 1], [2, 0]]).T\n",
+        "\n",
+        "print(x5)\n",
+        "\n",
+        "print(np.cov(x5))\n",
+        "\n",
+        "print(np.cov(x5,rowvar=False))\n"
+      ],
+      "metadata": {
+        "id": "qsc2bZbNwIJi",
+        "outputId": "677ff842-c9f9-4975-e7a4-e875bc8a957a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[0 1 2]\n",
+            " [2 1 0]]\n",
+            "[[ 1. -1.]\n",
+            " [-1.  1.]]\n",
+            "[[ 2.  0. -2.]\n",
+            " [ 0.  0.  0.]\n",
+            " [-2.  0.  2.]]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -382,9 +411,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LJJSjOG8oB9b",
-        "outputId": "5178f6e0-22b9-41c4-cf63-e06a22672fef"
+        "outputId": "ba529321-3545-449c-c3ba-7b92ca7a6893"
       },
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -428,9 +457,9 @@
           "height": 469
         },
         "id": "-3nn10_toyhw",
-        "outputId": "90b9a18d-0946-47a1-953c-26d938268132"
+        "outputId": "57c32bd5-23b1-49a6-dc04-65c6a7d09b31"
       },
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -440,7 +469,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 25
         },
         {
           "output_type": "display_data",
@@ -485,7 +514,7 @@
       "metadata": {
         "id": "g85CKCYWoGmq"
       },
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -514,9 +543,9 @@
           "height": 577
         },
         "id": "C7r-4P6prYUX",
-        "outputId": "5203f6e0-3f40-4b63-9dc3-bac19141a5b0"
+        "outputId": "6babead9-4bab-4af0-c600-759424a9090b"
       },
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -596,9 +625,9 @@
           "height": 1000
         },
         "id": "ipRVbiwYttRS",
-        "outputId": "e968f8ad-95bc-444e-fcf9-93a3e7bccad5"
+        "outputId": "c77b89a1-3db2-4c1f-8240-273c20018925"
       },
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -710,11 +739,11 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.collections.PathCollection at 0x7edcc0fd9600>"
+              "<matplotlib.collections.PathCollection at 0x7d7134d6aef0>"
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 28
         },
         {
           "output_type": "display_data",
