--- a/Exam/PHYS3151_Exam_Supp.ipynb
+++ b/Exam/PHYS3151_Exam_Supp.ipynb
@@ -45,13 +45,13 @@
         "    return  - (3.7/2)*(t*(1+0.2*(random.random()-0.5)*2))**2+5*(random.random()-0.5)*2\n",
         "with open('gravity_location_data.csv', mode='w') as gravity_file:\n",
         "    gravity_writer = csv.writer(gravity_file, delimiter=',', quotechar='\"', quoting=csv.QUOTE_MINIMAL)\n",
-        "    gravity_writer.writerow([ 'time', 'location', 'Earth/Mars'])\n",
+        "    gravity_writer.writerow([ 'time', 'location', 'Earth/Jupyter'])\n",
         "    for i in range(N):\n",
         "        time = random.uniform(0,5)\n",
         "        gravity_writer.writerow([ time, location_E(time), 'Earth'])\n",
         "    for i in range(N):\n",
         "        time = random.uniform(0,5)\n",
-        "        gravity_writer.writerow([ time, location_M(time), 'Mars'])"
+        "        gravity_writer.writerow([ time, location_M(time), 'Jupyter'])"
       ]
     },
     {
